# cb-mpc-demo

./: .gitignore  CMakeLists.txt  README.md
ServerA/: CMakeLists.txt  README.md  bootstrap.sh  env.sample  http_transport.cpp  mpc_partyA.cpp  server.py
ServerA/scripts/: 00-install-prereqs.sh  10-clone-cbmpc.sh  20-build-install-cbmpc.sh  30-clone-demo.sh  40-build-demo.sh
ServerA/systemd/: cbmpc-demo.service
ServerB/: CMakeLists.txt  README.md  env.sample  http_transport.h  mpc_partyB.cpp
ServerB/run/: run-cbmpc-tests.sh  run-demo.sh  run-go-ecdsa-mpc-with-backup.sh
ServerB/scripts/: 05-build-static-openssl.sh  20-build-install-cbmpc.sh  40-build-demo.sh  50-smoke-test.sh
ServerB/scripts/openssl/: build-static-openssl-linux.sh
ServerB/systemd/: cbmpc-demo.service
docs/: BUILD.md
scripts/: build_serverb.sh  install_cbmpc.sh  install_dependencies.sh  source_cbmpc_env.sh
